Update environment variables and class names to use 'WEBGUARD' instead of 'RENGINE'

--- a/web/templates/base/base.html
+++ b/web/templates/base/base.html
@@ -57,7 +57,7 @@
     {% endblock custom_js_css_link %}
   </head>
 
-  <body class="loading" data-layout-mode="horizontal" data-webguard-version="{{ RENGINE_CURRENT_VERSION }}" data-current-project="{{ current_project.slug }}">
+  <body class="loading" data-layout-mode="horizontal" data-webguard-version="{{ WEBGUARD_CURRENT_VERSION }}" data-current-project="{{ current_project.slug }}">
     <!-- Topbar begins -->
     {% include 'base/_items/top_bar.html' %}
     {# topbar ends #}
