--- a/web/templates/base/_items/top_bar.html
+++ b/web/templates/base/_items/top_bar.html
@@ -258,8 +258,8 @@
     </ul>
     <div class="logo-box">
       <a href="{% url 'dashboardIndex' current_project.slug %}" class="logo logo-dark text-center">
-        <span class="logo-sm"><h3 class="text-logo vertical-center">webGuard&nbsp;<small>{{ RENGINE_CURRENT_VERSION }}</small></h3></span>
-        <span class="logo-lg"><h3 class="text-logo vertical-center">webGuard&nbsp;<small>{{ RENGINE_CURRENT_VERSION }}</small></h3></span>
+        <span class="logo-sm"><h3 class="text-logo vertical-center">webGuard&nbsp;<small>{{ WEBGUARD_CURRENT_VERSION }}</small></h3></span>
+        <span class="logo-lg"><h3 class="text-logo vertical-center">webGuard&nbsp;<small>{{ WEBGUARD_CURRENT_VERSION }}</small></h3></span>
       </a>
       <a href="{% url 'dashboardIndex' current_project.slug %}" class="logo logo-light text-center">
         <span class="logo-sm"><h3 class="text-sm-logo vertical-center">WebGuard&nbsp;<small>Vulnerability Scanner</small></h3></span>
