--- a/web/dashboard/templates/dashboard/index.html
+++ b/web/dashboard/templates/dashboard/index.html
@@ -24,7 +24,7 @@ Dashboard
 <div class="row">
 	<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
 		<div class="card" id="tooltip-container">
-			<div class="card-body">
+			<div class="card-body bg-card-blue">
 				<i class="fa fa-info-circle text-muted float-end" data-bs-container="#tooltip-container" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Total Number of Targets/Domains"></i>
 				<h4 class="mt-0 font-16">Total Targets</h4>
 				<h2 class="text-primary my-3 text-center"><span data-plugin="counterup">{{domain_count|intcomma}}</span></h2>
@@ -38,7 +38,7 @@ Dashboard
 	</div>
 	<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
 		<div class="card" id="tooltip-container1">
-			<div class="card-body">
+			<div class="card-body bg-card-yellow">
 				<i class="fa fa-info-circle text-muted float-end" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Total Number of Subdomains discovered by WebGuard across all targets."></i>
 				<h4 class="mt-0 font-16">Total Subdomains</h4>
 				<h2 class="text-primary my-3 text-center"><span data-plugin="counterup">{{subdomain_count|intcomma}}</span></h2>
@@ -52,7 +52,7 @@ Dashboard
 	</div>
 	<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
 		<div class="card" id="tooltip-container2">
-			<div class="card-body">
+			<div class="card-body bg-card-green">
 				<i class="fa fa-info-circle text-muted float-end" data-bs-container="#tooltip-container2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Total Endpoints/URLs discovered by WebGuard across all targets & subdomains."></i>
 				<h4 class="mt-0 font-16">Total Endpoints</h4>
 				<h2 class="text-primary my-3 text-center">{{endpoint_count|intcomma}}</h2>
@@ -66,7 +66,7 @@ Dashboard
 	</div>
 	<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
 		<div class="card" id="tooltip-container3">
-			<div class="card-body">
+			<div class="card-body bg-card-red">
 				<i class="fa fa-info-circle text-muted float-end" data-bs-container="#tooltip-container3" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Total Vulnerabilities discovered by WebGuard across all targets, subdomains & endpoints."></i>
 				<h4 class="mt-0 font-16 text-danger">Total Vulnerabilities</h4>
 				<h2 class="text-danger my-3 text-center"><span data-plugin="counterup">{{total_vul_count|intcomma}}</span></h2>
@@ -82,7 +82,7 @@ Dashboard
 <div class="row">
 	<div class="col-xl-3 col-lg-3 col-md-2 col-sm-12 col-12">
 		<div class="card">
-			<div class="card-body">
+			<div class="card-body bg-card-activity">
 				<div class="d-flex align-items-start mb-3">
 					<div class="w-100">
 						<h5 class="mt-0 mb-0 font-15">
@@ -123,7 +123,7 @@ Dashboard
 			</div>
 		</div>
 		<div class="card">
-			<div class="card-body">
+			<div class="card-body bg-card-red">
 				<div class="d-flex align-items-start mb-3">
 					<div class="w-100">
 						<h5 class="mt-0 mb-0 font-15">
