Add custom styles for login page and enhance button design

--- a/web/login/templates/login.html
+++ b/web/login/templates/login.html
@@ -10,6 +10,7 @@
   <link href="{% static 'bootstrap/bootstrap-dark.min.css' %}" rel="stylesheet" type="text/css" id="bootstrap-dark-stylesheet" />
   <link href="{% static 'assets/css/app-dark.min.css' %}" rel="stylesheet" type="text/css" id="main-dark-stylesheet" />
   <link href="{% static 'assets/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
+  <link href="{% static 'custom/authCustom.css' %}" rel="stylesheet" type="text/css" />
   <style media="screen">
     @font-face {
       font-family: "Cerebri Sans,sans-serif";
@@ -96,7 +97,7 @@
                 </div>
                 {% endif %}
                 <div class="text-center d-grid">
-                  <button class="btn btn-primary" type="submit"> Log In </button>
+                  <button class="btn btn-primary login-button" type="submit"> Log In </button>
                 </div>
               </form>
             </div>
